samples/_failures_safe/1761641428_a9f508_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edf4a3ff.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_edf4a3ff.c:179:9: error: missing terminating " character
  179 |         "IDENTIFIER
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_edf4a3ff.c:179:9: error: expected expression at end of input
./samples/SAFE/__tmp_edf4a3ff.c:179:9: error: expected declaration or statement at end of input
